--- a/.github/workflows/codescanning.yml
+++ b/.github/workflows/codescanning.yml
@@ -9,16 +9,9 @@
 # the `language` matrix defined below to confirm you have the correct set of
 # supported CodeQL languages.
 #
-name: "CodeQL"
+name: "lab 05 CodeQL"
 
-on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    # The branches below must be a subset of the branches above
-    branches: [ "master" ]
-  schedule:
-    - cron: '27 7 * * 4'
+on: workflow_dispatch
 
 jobs:
   analyze:
